@startuml
left to right direction

class Platform {
    -String designation
}

class Organization {
    -String name
    -String NIF
}

class PaymentTransaction {
    -String id
    -Date endDate
    -Double delay
    -String workQualityDescription
}

class Freelancer {
    -String id
    -String name
    -String expertiseLevel
    -String email
    -String NIF
    -String IBAN
    -String address
    -String country
}

class Task {
  -String id
  -String briefDescription
  -Integer timeDuration
  -Double costPerHour
  -String taskCategory
}


Platform "1" -- "*" Organization : has >
Organization "1" -- "*" PaymentTransaction : has >
PaymentTransaction "1" --> "1" Freelancer : relates to
PaymentTransaction "1" --> "1" Task : relates to
Task "1..*" --> "1" Freelancer : is assigned to
@enduml